# pptx_autogen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
data/output/: Christmas_Presentation.pptx
examples/: Christmas_Presentation.pptx  make_christmas_pptx.py  make_df_pptx.py  workbook1.py
pptgen/: colors.py  create_presentation.py  entrypoint.py  generate_dataframe_meta.py
pptgen/model/: base_paths.py  color_themes.py  content_slide.py  dataframe_meta.py  image_slide.py  pptx_model.py
pptgen/model/powerpoint/: __init__.py  color_themes.py  common.py  content_slide.py  image_slide.py  title_slide.py
